adding event code to publish, mobile actions fix

--- a/create/main2.html
+++ b/create/main2.html
@@ -132,6 +132,10 @@
                     <div class="content">
                         <div class="quiz-result result">
                             <button class="invert-btn quiz back-btn"><i class="back-icon material-icons">arrow_back</i></button>
+                            <div class="event-name-and-code grid-area-apply">
+                                <p class="current-event-name"></p>
+                                <p class="current-event-code"></p>
+                            </div>
                             <div class="quiz-loader"><img src="../img/event-loader.gif" class="event-loader" alt=""></div>
                             <canvas class="quiz-details">
 
@@ -248,6 +252,10 @@
                     <div class="content">
                         <div class="poll-result result">
                             <button class="invert-btn poll back-btn"><i class="back-icon material-icons">arrow_back</i></button>
+                            <div class="event-name-and-code grid-area-apply">
+                                <p class="current-event-name"></p>
+                                <p class="current-event-code"></p>
+                            </div>
                             <div class="poll-loader"><img src="../img/event-loader.gif" class="event-loader" alt=""></div>
                             <canvas class="poll-details">
 
@@ -358,6 +366,10 @@
                         <div class="feedback-result result">
                             <button class="invert-btn feedback back-btn"><i class="back-icon material-icons">arrow_back</i></button>
                             <button class="refresh-btn"><img src="../img/refresh.png" alt=""></button>
+                            <div class="event-name-and-code grid-area-apply">
+                                <p class="current-event-name"></p>
+                                <p class="current-event-code"></p>
+                            </div>
                             <div class="feedback-loader"><img src="../img/event-loader.gif" class="event-loader" alt=""></div>
                             <div class="feedback-result-grid">
                                 <div class="feedback-details">
