--- a/participate/event2.html
+++ b/participate/event2.html
@@ -57,6 +57,7 @@
         .header>svg {
             position: relative;
             margin-left: 20px;
+            height: 80%;
         }
 
         .main {
