changing event loader

--- a/create/main2.html
+++ b/create/main2.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/main2.css">
     <link rel="icon" type="image/png" href="../img/favicon.png">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <title>Hermes | Admin</title>
 </head>
 
@@ -136,7 +137,7 @@
                                 <p class="current-event-name"></p>
                                 <p class="current-event-code"></p>
                             </div>
-                            <div class="quiz-loader"><img src="../img/event-loader.gif" class="event-loader" alt=""></div>
+                            <div class="quiz-loader"><lottie-player src="../img/data.json"  background="transparent"  speed="1"  style="width: 35vh; height: 35vh;" class="event-loader"  loop autoplay></lottie-player></div>
                             <canvas class="quiz-details">
 
                             </canvas>
@@ -256,7 +257,7 @@
                                 <p class="current-event-name"></p>
                                 <p class="current-event-code"></p>
                             </div>
-                            <div class="poll-loader"><img src="../img/event-loader.gif" class="event-loader" alt=""></div>
+                            <div class="poll-loader"><lottie-player src="../img/data.json"  background="transparent"  speed="1"  style="width: 35vh; height: 35vh;" class="event-loader"  loop autoplay></div>
                             <canvas class="poll-details">
 
                             </canvas>
@@ -370,7 +371,7 @@
                                 <p class="current-event-name"></p>
                                 <p class="current-event-code"></p>
                             </div>
-                            <div class="feedback-loader"><img src="../img/event-loader.gif" class="event-loader" alt=""></div>
+                            <div class="feedback-loader"><lottie-player src="../img/data.json"  background="transparent"  speed="1"  style="width: 35vh; height: 35vh;" class="event-loader"  loop autoplay></div>
                             <div class="feedback-result-grid">
                                 <div class="feedback-details">
                                     <h1 class="feedback-question"></h1>
