--- a/create/main2.html
+++ b/create/main2.html
@@ -479,7 +479,7 @@
                 </div>
             </div>
             <div class="notify"></div>
-            <div class="dialog">
+            <!-- <div class="dialog">
                 <div class="dialog-contents">
                     <h1 class="dialog-question"></h1>
                     <div class="dialog-buttons">
@@ -487,7 +487,7 @@
                         <button id="dialog_no" class="main-button">No</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
