if options are too long

--- a/participate/action.html
+++ b/participate/action.html
@@ -623,10 +623,10 @@
                 button.classList.add("main-button");
                 button.addEventListener("click", optionsMaster)
                 options_div.appendChild(button);
-                /* let butt = document.querySelector(".options-div button").offsetHeight;
+                let butt = document.querySelector(".options-div button").offsetHeight;
                 if(butt > 450){
                     options_div.style.gridTemplateColumns = `auto`;
-                } */
+                }
             })
         }
 
