changes to default to login screen on reload

--- a/create/main2.html
+++ b/create/main2.html
@@ -72,8 +72,8 @@
                 <i class="material-icons ham">menu</i>
                 <p class="nav-text">Home</p>
             </div>
-            <div class="main-container">
-                <div class="tab-content home-control show">
+            <div class="main-container login-background">
+                <div class="tab-content home-control">
                     <div class="content">
                         <div class="home-create create">
                             <button class="invert-btn home back-btn">
@@ -460,7 +460,7 @@
                         Please login to use these features
                     </div>
                 </div>
-                <div class="user-login tab-content">
+                <div class="user-login tab-content show">
                     <div class="user-login-container">
                         <h1>Get Started!</h1>
                         <form action="" method="post" id="login_form">
