tab borders default to login

--- a/create/main2.html
+++ b/create/main2.html
@@ -17,7 +17,7 @@
 <body>
     <div class="mobile options-container-mobile">
         <div class="nav-container">
-            <p class="home-section tab-item tab-border" id="home-control">Home</p>
+            <p class="home-section tab-item" id="home-control">Home</p>
             <p class="quiz-section tab-item" id="quiz-control">Quiz</p>
             <p class="poll-section tab-item" id="poll-control">Poll</p>
             <p class="feedback-section tab-item" id="feedback-control">Feedback</p>
@@ -60,7 +60,7 @@
                 </g>
             </svg>
             <div class="options-container not-mobile">
-                <p class="home-section tab-item tab-border" id="home-control">Home</p>
+                <p class="home-section tab-item" id="home-control">Home</p>
                 <p class="quiz-section tab-item" id="quiz-control">Quiz</p>
                 <p class="poll-section tab-item" id="poll-control">Poll</p>
                 <p class="feedback-section tab-item" id="feedback-control">Feedback</p>
