--- a/participate/action.html
+++ b/participate/action.html
@@ -105,7 +105,7 @@
 
         .select {
             /* box-shadow: var(--main-shadow-hover); */
-            color: rgb(150, 150, 150);
+            color: white;
             background-color: #83D39D;
         }
 
