--- a/create/main2.html
+++ b/create/main2.html
@@ -168,7 +168,7 @@
                                             <div class="collapsible-header question-header">
                                                 <p>Question 1</p>
                                                 <p class="question-title">Question Title</p>
-                                                <i class="material-icons" id="drop">arrow_drop_down</i>
+                                                <i class="material-icons">arrow_drop_down</i>
                                             </div>
                                             <div class="collapsible-body">
                                                 <div class="quiz-question-create">
