--- a/create/main2.html
+++ b/create/main2.html
@@ -325,16 +325,23 @@
                                             <div class="collapsible-body">
                                                 <div class="poll-question-create">
                                                     <label for="poll_name">Question</label>
-                                                    <input type="text" id="poll_name" class="question_name main-input" placeholder="Enter Question">
+                                                    <input type="text" id="poll_name" class="question_name main-input"
+                                                        placeholder="Enter Question">
                                                     <label for="poll_options">Options</label>
-                                                    <div id="poll_options_div_1" class="poll_options_div"><input type="text" class="main-input poll-option" placeholder="Enter Option"></div>
+                                                    <div id="poll_options_div_1" class="poll_options_div"><input
+                                                            type="text" class="main-input poll-option"
+                                                            placeholder="Enter Option"></div>
                                                     <div class="add-remove-options">
-                                                        <button class="add-option-btn poll_options_div_1 main-button" onclick="addOption(this)">+ Add</button>
-                                                        <button class="delete-option-btn poll_options_div_1 main-button" onclick="deleteOption(this)">- Remove</button>
+                                                        <button class="add-option-btn poll_options_div_1 main-button"
+                                                            onclick="addOption(this)">+ Add</button>
+                                                        <button class="delete-option-btn poll_options_div_1 main-button"
+                                                            onclick="deleteOption(this)">- Remove</button>
                                                     </div>
                                                     <div class="poll-actions">
-                                                        <button id="add_poll_btn" onclick="addPollQuestion(this)" class="main-button 1">+ Add Poll Question</button>
-                                                        <button class="main-button poll 1 del-btn" id="del_question_btn" onclick="delQuestion(this)">Delete Question</button>
+                                                        <button id="add_poll_btn" onclick="addPollQuestion(this)"
+                                                            class="main-button 1">+ Add Poll Question</button>
+                                                        <button class="main-button poll 1 del-btn" id="del_question_btn"
+                                                            onclick="delQuestion(this)">Delete Question</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -385,8 +392,10 @@
                                             </button>
                                         </div>
                                         <div class="actions-buttons">
-                                            <button class="invert-btn poll main-button publish-btn" id="publish_poll">Publish Poll</button>
-                                            <button class="main-button poll continue-poll-btn continue-btn">Continue Poll</button>
+                                            <button class="invert-btn poll main-button publish-btn"
+                                                id="publish_poll">Publish Poll</button>
+                                            <button class="main-button poll continue-poll-btn continue-btn">Continue
+                                                Poll</button>
                                         </div>
                                     </div>
                                 </div>
@@ -455,41 +464,54 @@
                             </div>
                         </div>
                         <div class="feedback-create create show-select">
-                            <div action="" method="post" class="Feedback-internal show-action">
-                                <form action="" method="post" class="feedback-create-container show-action"
-                                    id="feedback_form">
+                            <div class="Feedback-internal show-action">
+                                <div action="" method="post" class="feedback-create-container show" id="feedback_form">
                                     <div class="event-name-and-code create-section grid-area-apply">
                                         <p class="current-event-name"></p>
                                         <p class="current-event-code"></p>
                                     </div>
-                                    <label for="feedback_name">Question</label>
-                                    <textarea rows="3" type="text" id="feedback_name" class="main-input"
-                                        placeholder="Enter Feedback Question"></textarea>
-                                    <label for="theme_feedback">Theme</label>
-                                    <div class="theme" id="theme_feedback">
-                                        <button class="main-button theme-btn feedback box box-feedback">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="42" height="18"
-                                                viewBox="0 0 42 18">
-                                                <path class="box-feedback-white icon" id="Path_106" data-name="Path 106"
-                                                    d="M0,0H42V18H0Z" fill="#2784FB" /> </svg>
-                                            <p class="theme-text">One by one</p>
-                                        </button>
-                                        <!-- <button class="main-button theme-btn feedback cont cont-feedback">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="42" height="18"
-                                                viewBox="0 0 42 18">
-                                                <path class="cont-feedback-white icon" id="Path_106"
-                                                    data-name="Path 106" d="M0,0H42V18H0Z" fill="#2784FB" /> </svg>
-                                            <p class="theme-text">continuous</p>
-                                        </button> -->
+                                    <ul class="feedback-collapsible collapsible">
+                                        <li id="feedback-question-1" class="active">
+                                            <div class="question-header collapsible-header">
+                                                <p>Question 1</p>
+                                                <p class="question-title">Question Title</p>
+                                                <i class="material-icons" id="drop">arrow_drop_down</i>
+                                            </div>
+                                            <div class="collapsible-body">
+                                                <div class="feedback-question-create">
+                                                    <label for="feedback_name">Question</label>
+                                                    <textarea rows="3" type="text" id="feedback_name" class="main-input"
+                                                        placeholder="Enter Feedback Question"></textarea>
+                                                    <div class="feedback-actions">
+                                                        <button id="add_feedback_btn" class="main-button 1" onclick="addFeedbackQuestion(this)">+ Add
+                                                            Question</button>
+                                                        <button class="main-button feedback 1 del-btn" id="del_question_btn"
+                                                            onclick="delQuestion(this)">Delete Question</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <div class="final-feedback-actions">
+                                        <p>Select Theme</p>
+                                        <div class="theme" id="theme_feedback">
+                                            <button class="main-button theme-btn feedback box box-feedback">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="42" height="18"
+                                                    viewBox="0 0 42 18">
+                                                    <path class="box-feedback-white icon" id="Path_106"
+                                                        data-name="Path 106" d="M0,0H42V18H0Z" fill="#2784FB" /> </svg>
+                                                <p class="theme-text">One by one</p>
+                                            </button>
+                                        </div>
+                                        <div class="actions-buttons">
+                                            <button class="invert-btn feedback main-button publish-btn"
+                                                id="publish_feedback">Publish Feedback</button>
+                                            <button
+                                                class="main-button feedback continue-feedback-btn continue-btn">Continue
+                                                Feedback</button>
+                                        </div>
                                     </div>
-                                    <div class="feedback-actions">
-                                        <button id="add_feedback_btn" class="main-button feedback">+ Add
-                                            Question</button>
-                                        <button class="main-button review-btn feedback">Review Feedback</button>
-                                        <button class="main-button feedback continue-feedback-btn continue-btn">Continue
-                                            Feedback</button>
-                                    </div>
-                                </form>
+                                </div>
                                 <div class="feedback-summary">
                                     <button class="back-btn feedback form-btn"><i
                                             class="back-icon material-icons">arrow_back</i></button>
@@ -504,9 +526,9 @@
 
                                         </div>
                                     </div>
-                                    <button class="invert-btn feedback main-button publish-btn"
+                                    <!-- <button class="invert-btn feedback main-button publish-btn"
                                         id="publish_feedback">Publish
-                                        Feedback</button>
+                                        Feedback</button> -->
 
                                 </div>
                             </div>
