--- a/participate/action.html
+++ b/participate/action.html
@@ -518,15 +518,23 @@
         }
 
         let fetchNextQuestion = () => {
-            var requestOptions = {
-                method: 'GET',
-                redirect: 'follow'
-            };
-            console.log(theQuestionId)
-            fetch("https://mighty-sea-62531.herokuapp.com/api/questions/nextQuestion/" + actionId + "/" + theQuestionId, requestOptions)
-                .then(response => response.json())
-                .then(result => { console.log(result); theQuestionId = result["_id"]; theQuestion = result; renderQuiz(theQuestion); })
-                .catch(error => console.log('error', error));
+            return new Promise((resolve, reject) => {
+                var requestOptions = {
+                    method: 'GET',
+                    redirect: 'follow'
+                };
+                console.log(theQuestionId)
+                fetch("https://mighty-sea-62531.herokuapp.com/api/questions/nextQuestion/" + actionId + "/" + theQuestionId, requestOptions)
+                    .then(response => response.json())
+                    .then(result => { console.log(result);
+                        theQuestionId = result["_id"];
+                        theQuestion = result;
+                        renderQuiz(theQuestion);
+                        resolve();
+                    })
+                    .catch(error => console.log('error', error));
+            })
+
         }
 
 
@@ -554,12 +562,12 @@
                     }
                 })
             })
-            socket.on("next", data => {
+            socket.on("next", async data => {
                 if (data == actionId) {
-                    if(show == true){
+                    if (show == true) {
                         show == false;
                     }
-                    fetchNextQuestion();
+                    await fetchNextQuestion();
                     sessionStorage.setItem("Answered", "false");
                     waitDiv.classList.remove("show");
                     container.classList.add("show")
@@ -625,7 +633,7 @@
             options_div.innerHTML = "";
             question["options"].forEach((opt, i) => {
                 let button = document.createElement("button");
-                button.innerHTML = `<strong class = "grey-text">${i+1}. </strong>${opt["option"]}`;
+                button.innerHTML = `<strong class = "grey-text">${i + 1}. </strong>${opt["option"]}`;
                 button.value = opt["_id"];
                 button.classList.add("main-button");
                 button.addEventListener("click", optionsMaster)
