--- a/index.html
+++ b/index.html
@@ -1,12 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+    <style>
+        :root {
+            --main-color: rgb(40, 131, 251);
+        }
+        * {
+            font-family: 'Montserrat', sans-serif;
+        }
+        p{
+            font-size: 1.1rem;
+            /* font-weight: 600; */
+        }
+        a{
+            color:var(--main-color);
+        }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+            display: block;
+            grid-template-rows: 7% 93%;
+            background-color: #f5f5f5;
+            min-height: 100vh;
+            padding-bottom: 40px;
+        }
+
+        nav {
+            position: relative;
+            background: white;
+            height: 8vh;
+            -webkit-box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.158);
+            -moz-box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.158);
+            box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.158);
+        }
+
+        nav>svg {
+            position: relative;
+            fill: var(--main-color);
+            height: 80%;
+            padding-left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+        }
+
+        .content-container {
+             
+            background-color: #f5f5f5;
+            align-self: start;
+        }
+
+        .left-feathers {
+            position: fixed;
+            left: 0;
+            bottom: 50px;
+            z-index: 1;
+            opacity: 0.7;
+        }
+
+        .left-feathers>img {
+            position: relative;
+            left: -60px;
+        }
+
+        .right-feathers {
+            position: fixed;
+            right: 0;
+            padding-top: 10px;
+            z-index: 1;
+            opacity: 0.7;
+        }
+
+        .right-feathers>img {
+            position: relative;
+            left: 40px;
+        }
+
+        .rest-container {
+            position: relative;
+            width: 90%;
+            margin: 0 auto;
+            padding-top: 40px;
+            z-index: 2;
+        }
+
+        .project-by {
+            position: relative;
+            display: grid;
+            grid-template-columns: auto auto;
+            column-gap: 20px;
+            width: fit-content;
+            width: -moz-max-content;
+            justify-items: center;
+            align-items: center;
+        }
+
+        .project-by>img {
+            height: 70%;
+            border-radius: 4px;
+        }
+        .about{
+            position: relative;
+            width: 90%;
+            margin-top: 10px;
+            margin-bottom: 90px;
+        }
+        .buttons{
+            position: relative;
+            margin-bottom: 50px;
+        }
+        .main-button {
+            color: inherit;
+            text-align: center;
+
+            text-decoration: none;
+            padding: 12px 40px;
+            /* width: 50%; */
+            box-sizing: border-box;
+            white-space: normal !important;
+            word-wrap: break-word;
+            border-radius: 3px;
+            background-color: var(--main-color);
+            border: none;
+            color: white;
+            font-size: 1.1rem;
+            box-shadow: var(--main-shadow);
+            margin-right: 20px;
+        }
+        .creators > h1{
+            margin: 0 0;
+        }
+        .creators > p{
+            margin: 0;
+        }
+        .creator-grid{
+            display: grid;
+            width: 90%;
+            margin: 60px auto;
+            grid-template-columns: repeat(3, auto);
+            row-gap: 50px;
+            justify-items: center;
+            align-items: center;
+        }
+        .ele{
+            font-size: 1.1rem;
+            font-weight: 600;
+        }
+
+        @media(max-width: 700px){
+            .left-feathers{
+                height: 200px;
+                max-width: 90vw;
+            }
+            .right-feathers{
+                height: 200px;
+                max-width: 90vw;
+            }
+            .project-by > img{
+                height: auto;
+                width: 100%;
+            }
+            .buttons{
+                width: 100%;
+            }
+            .buttons > a{
+                display: block;
+                width: 90%;
+                margin: 0 auto;
+                margin-bottom: 20px;
+            }
+            .creator-grid{
+                grid-template-columns: auto;
+            }
+        }
+    </style>
     <title>Document</title>
 </head>
+
 <body>
-    <a href="./participate/event2.html">Link to participate in a quiz</a>
-    <a href="./create/main2.html">Link to create a quiz</a>
+    <main>
+        <nav>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 189.622 70.271">
+                <g id="Group_354" data-name="Group 354" transform="translate(-89.172 -74)">
+                    <g id="Group_349" data-name="Group 349" transform="translate(89.172 74)" class="logo-color">
+                        <path id="Path_132" data-name="Path 132"
+                            d="M711.584,398.894l-7.2-.9a1.6,1.6,0,0,0-1.681.976c-2.682,6.464-16.158,38.6-19.963,41.089-.127.083-.253.164-.373.255-1.338,1.023-8.456,6.362-11.28,6.362-1.431,0-1.312.746-.763,1.553a4.63,4.63,0,0,0,3.837,2H687.5a5.91,5.91,0,0,0,4.018-1.576l14.021-13a24.421,24.421,0,0,1,8.525-5.137l7.624-2.672a2.016,2.016,0,0,0,1.349-1.9v-4.558a5.034,5.034,0,0,0-.857-2.81l-3.426-5.093a4.766,4.766,0,0,1-.784-3.168l.182-1.7a.335.335,0,0,0-.453-.348l-4.316,1.65-1.066-10.262A.847.847,0,0,0,711.584,398.894Z"
+                            transform="translate(-669.938 -379.955)" />
+                        <g id="Group_348" data-name="Group 348" transform="translate(43.733 0)">
+                            <path id="Path_133" data-name="Path 133"
+                                d="M997.171,281.677h0a13.762,13.762,0,0,1,8.772-5.966L1028.992,271h0a14.264,14.264,0,0,1-10.006,6.987Z"
+                                transform="translate(-994.45 -271)" />
+                            <path id="Path_134" data-name="Path 134"
+                                d="M978.122,344.39,978,347.2l21.537-3.9a7.614,7.614,0,0,0,6.1-5.939h0l-25.451,4.663A2.516,2.516,0,0,0,978.122,344.39Z"
+                                transform="translate(-978 -327.94)" />
+                            <path id="Path_135" data-name="Path 135"
+                                d="M979.475,408.117l.235,2.355a1.69,1.69,0,0,0,1.993,1.493l13.555-2.542a5.8,5.8,0,0,0,4.733-5.7h0Z"
+                                transform="translate(-979.266 -384.88)" />
+                        </g>
+                        <circle id="Ellipse_16" data-name="Ellipse 16" cx="3.194" cy="3.194" r="3.194"
+                            transform="translate(40.326 24.985)" fill="#fff" />
+                    </g>
+                    <rect id="Rectangle_41" data-name="Rectangle 41" width="13.82" height="3.339"
+                        transform="translate(103.975 130.317) rotate(33.813)" fill="#fff" />
+                    <rect id="Rectangle_42" data-name="Rectangle 42" width="13.82" height="3.185"
+                        transform="translate(117.543 97.793) rotate(10.519)" fill="#fff" />
+                    <rect id="Rectangle_43" data-name="Rectangle 43" width="28.418" height="3.747"
+                        transform="translate(109.766 113.059) rotate(23.201)" fill="#fff" />
+                    <rect id="Rectangle_44" data-name="Rectangle 44" width="28.418" height="3.043"
+                        transform="translate(133.403 102.119) rotate(84.846)" fill="#fff" />
+                    <text id="Hermes" transform="translate(155.794 136)" font-size="30"
+                        font-family="Montserrat-Bold, Montserrat" font-weight="700">
+                        <tspan x="0" y="0">Hermes</tspan>
+                    </text>
+                </g>
+            </svg>
+        </nav>
+        <div class="content-container">
+            <div class="left-feathers">
+                <img src="./img/left_feathers.png" alt="">
+            </div>
+            <div class="right-feathers">
+                <img src="./img/right_feathers.png" alt="">
+            </div>
+            <div class="rest-container">
+                <div class="project-by">
+                    <p>A project developed by </p>
+                    <img src="./img/dsclogo.png" alt="">
+                </div>
+                <div class="about">
+                    <h1>About</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus odio non natus nulla, quod
+                        quas, exercitationem minus error ducimus cum officia velit autem aut fugit! Mollitia delectus
+                        expedita quibusdam rem!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione ex voluptatem libero itaque
+                        optio sit, placeat officiis minus natus sunt aspernatur ut? Ea similique velit atque dolore id
+                        quae eligendi.</p>
+                    <p>Visit the DSC VIT's official website to take a glimpse of our other projects, at <a
+                            target="_blank" href="https://dscvit.com">dscvit.com</a></p>
+                </div>
+                <div class="buttons">
+                    <a href="./participate/event2.html" target="_blank" class="main-button">Participate in an Event</a>
+                    <a href="./create/main2.html" target="_blank" class="main-button">Create an Event</a>
+                </div>
+                <div class="creators">
+                    <h1>Behind the Project</h1>
+                    <p>I don't know what to put in here, so i'm writing this!</p>
+                    <div class="creator-grid">
+                        <div class="ele">
+                            Md Hishaam 
+                        </div>
+                        <div class="ele">
+                            Prakhar Soni
+                        </div>
+                        <div class="ele">
+                            Shravani Shete
+                        </div>
+                        <div class="ele">
+                            Ubaid
+                        </div>
+                        <div class="ele">
+                            Angad
+                        </div>
+                        <div class="ele">
+                            Idk
+                        </div>
+                        <div class="ele">
+
+                        </div>
+                    </div>
+                    <div class="issues">
+                        <p>If you face any issues please email us at,</p>
+                        <a href="mailto:emailus@gmail.com">emailus@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
 </body>
+
 </html>
